args pass through fix