@@ -78,7 +78,6 @@
 						<arg>jdk.management.agent/jdk.internal.agent=druvu.jconsole</arg>
 						<arg>--add-exports</arg>
 						<arg>jdk.jconsole/tools.jconsole.inspector=druvu.jconsole</arg>
-
 					</compilerArgs>
 					<annotationProcessorPaths>
 						<path>
@@ -152,8 +151,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>3.0.0</version>
-				<!-- I.E mvn exec:exec@start -Dsq.env.type=dev -->
-				<!-- for interactive console use generated sh to start the db -->
+
 				<executions>
 					<execution>
 						<id>start</id>
@@ -162,16 +160,31 @@
 						</goals>
 
 						<configuration>
-							<mainClass>com.druvu.jconsole.extra.JConsoleEx</mainClass>
+							<includeProjectDependencies>true</includeProjectDependencies>
+							<mainClass>druvu.jconsole/com.druvu.jconsole.extra.JConsoleEx</mainClass>
 							<arguments>
 								<argument>--add-exports</argument>
 								<argument>jdk.jconsole/sun.tools.jconsole=druvu.jconsole</argument>
+								<argument>--add-exports</argument>
+								<argument>jdk.internal.jvmstat/sun.jvmstat.monitor=druvu.jconsole</argument>
+								<argument>--add-exports</argument>
+								<argument>jdk.management.agent/jdk.internal.agent=druvu.jconsole</argument>
+								<argument>--add-opens</argument>
+								<argument>jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</argument>
+								<argument>-c=#8BC6E1FF</argument>
+								<argument>-debug</argument>
+								<argument>localhost:5703</argument>
 							</arguments>
+							<systemProperties>
+								<systemProperty>
+									<key>swing.defaultlaf</key>
+									<value>javax.swing.plaf.nimbus.NimbusLookAndFeel</value>
+								</systemProperty>
+							</systemProperties>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-
 		</plugins>
 	</build>
 
